# SilkNews

./: main.py  pyproject.toml  requirements.txt
src/data/clean_data/: resultados_experimentos.csv
src/data/extraccion_caracteristicas/: extraccion_caracteristicas.csv
src/data/raw_data/: falsas.csv
src/news/: falsas.txt  verdaderas.csv  verdaderas.txt
src/notebooks/: aprendizaje_automatico.ipynb  extraccion_caracteristicas.ipynb  load_data.ipynb  ponderacion_caracteristicas.ipynb  preprocesamiento.ipynb
src/preprocesamiento/: preprocesamiento.ipynb
src/scrapers/: Fuentes.md  base_scraper.py  scraper_bbc.py  scraper_chequeado.py  scraper_colombiaCheck.py  scraper_espectador.py
src/scrapers/data_scraped/: noticias.csv
src/scrapers/data_scraped/falso/: chequeado_001.txt  chequeado_002.txt  chequeado_003.txt  chequeado_004.txt  chequeado_005.txt  chequeado_006.txt  chequeado_007.txt  chequeado_008.txt  chequeado_009.txt  chequeado_010.txt  chequeado_011.txt  chequeado_012.txt  chequeado_013.txt  chequeado_014.txt  chequeado_015.txt  chequeado_016.txt  chequeado_017.txt  chequeado_018.txt  chequeado_019.txt  chequeado_020.txt  chequeado_021.txt  chequeado_022.txt  chequeado_023.txt  chequeado_024.txt  chequeado_025.txt  chequeado_026.txt  chequeado_027.txt  chequeado_028.txt  chequeado_029.txt  chequeado_030.txt  chequeado_031.txt  chequeado_032.txt  chequeado_033.txt  chequeado_034.txt  chequeado_035.txt  chequeado_036.txt  chequeado_037.txt  chequeado_038.txt  chequeado_039.txt  chequeado_040.txt  (+60 more)
src/scrapers/utils/: csv_manager.py  file_manager.py
(+100 files in other folders)
