[project]
name = "silknews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.9.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "selenium>=4.35.0",
]
