[project]
name = "silknews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.9.0",
    "bs4>=0.0.2",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
    "matplotlib>=3.10.6",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "pip>=25.2",
]
